cif/org.eclipse.escet.cif.tests/tests/cif2mcrl2/invalid.err
WARNING: File "cif2mcrl2/invalid.cif": Semantic warning at line 17, column 3: Duplicate state invariant.
WARNING: File "cif2mcrl2/invalid.cif": Semantic warning at line 18, column 3: Duplicate state invariant.
WARNING: File "cif2mcrl2/invalid.cif": Semantic warning at line 22, column 13: Automaton "g.no_initial" has no initial location.
WARNING: File "cif2mcrl2/invalid.cif": Semantic warning at line 39, column 20: Discrete variable "g.p.x2" is not used anywhere in the specification.
WARNING: File "cif2mcrl2/invalid.cif": Semantic warning at line 43, column 11: Duplicate state invariant.
WARNING: File "cif2mcrl2/invalid.cif": Semantic warning at line 44, column 11: Duplicate state invariant.
ERROR: CIF to mCRL2 transformation failed due to unsatisfied preconditions:

  ------------------------------
  (1/16) A list literal is used.
  ------------------------------
   * In automaton "g.p":
     - edge e2 do lb := lb + [false];
                             ^
   * In discrete variable "g.p.lb":
     - disc list bool lb = [true];
                           ^

  ---------------------------
  (2/16) A list type is used.
  ---------------------------
   * In automaton "g.p":
     - edge e2 do lb := lb + [false];
                  ^     ^  ^ ^
   * In discrete variable "g.p.lb":
     - disc list bool lb = [true];
            ^              ^

  -------------------------------------
  (3/16) A real number literal is used.
  -------------------------------------
   * In group "g":
     - equation y' = 2.0;
                     ^
   * In continuous variable "g.p.cnt":
     - cont cnt der 1.0;
                    ^
   * In continuous variable "g.x":
     - cont x der 1.0;
                  ^

  ---------------------------
  (4/16) A real type is used.
  ---------------------------
   * In group "g":
     - equation y' = 2.0;
                     ^
   * In continuous variable "g.p.cnt":
     - cont cnt der 1.0;
                    ^
   * In continuous variable "g.x":
     - cont x der 1.0;
                  ^

  ---------------------------
  (5/16) An equation is used.
  ---------------------------
   * In group "g":
     - equation y' = 2.0;
                   ^

  ----------------------------
  (6/16) An invariant is used.
  ----------------------------
   * In group "g":
     - invariant false;
       ^
   * In automaton "g.p":
     - plant invariant false;
             ^
     - plant invariant false;
             ^

  ------------------------------------------------
  (7/16) Automaton has multiple initial locations.
  ------------------------------------------------
   * In group "g":
     - automaton mult_initials:
                 ^

  -----------------------------------------
  (8/16) Automaton has no initial location.
  -----------------------------------------
   * In group "g":
     - automaton no_initial:
                 ^

  -----------------------------------------------------------
  (9/16) Binary operator "+" is used on a list typed operand.
  -----------------------------------------------------------
   * In automaton "g.p":
     - edge e2 do lb := lb + [false];
                           ^

  --------------------------------------------------
  (10/16) Component has an initialization predicate.
  --------------------------------------------------
   * In group "g":
     - initial false;
               ^

  ----------------------------------------------------------------
  (11/16) Discrete variable has multiple potential initial values.
  ----------------------------------------------------------------
   * In automaton "g.p":
     - disc int[1..2] x1 in {1, 2};
                      ^

  ------------------------------------------------------------------------------------------
  (12/16) Discrete variable has multiple potential initial values (any value in its domain).
  ------------------------------------------------------------------------------------------
   * In automaton "g.p":
     - disc int[1..2] x2 in any;
                      ^

  --------------------------------
  (13/16) Edge has an 'if' update.
  --------------------------------
   * In automaton "g.p":
     - edge e1 do if true: x1 := 2 end;
                  ^

  -----------------------------------------
  (14/16) Edge has an explicit 'tau' event.
  -----------------------------------------
   * In automaton "g.no_initial":
     - edge e1, e2, tau;
                    ^
     - edge tau;
            ^

  ---------------------------
  (15/16) Event is a channel.
  ---------------------------
   * In group "g":
     - event int[0..5] e1;
                       ^
     - event int[0..5] e2;
                       ^

  ------------------------------------------
  (16/16) Variable is a continuous variable.
  ------------------------------------------
   * In group "g":
     - cont x der 1.0;
            ^
     - cont y;
            ^
   * In automaton "g.p":
     - cont cnt der 1.0;
            ^
